<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="website.dango.virustickerwidget.ActivityWidgetConfigure"
    android:background="@color/black_overlay"
    >

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >


            <TextView
                android:id="@+id/cityHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/choose_your_country"
                android:textSize="@dimen/first_widget_line"
                android:padding="@dimen/space_10dp"
                />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/editCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/widget_padding"
                app:layout_constraintTop_toBottomOf="@id/cityHeader"
                android:padding="@dimen/space_10dp"
                android:textColor="@color/white_overlay"
                />

            <TextView
                android:id="@+id/typeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                app:layout_constraintTop_toBottomOf="@id/editCountry"
                android:layout_margin="@dimen/space_10dp"
                android:textSize="@dimen/first_widget_line"
                />

            <HorizontalScrollView
                android:id="@+id/scrollType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/typeHeader"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:padding="@dimen/space_10dp"
                >
                <RadioGroup
                    android:id="@+id/rgMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@id/confirmed"
                    >
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/confirmed"
                        android:text="@string/confirmed"
                        style="@style/radio_button"
                        />
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/deaths"
                        android:text="@string/deaths"
                        style="@style/radio_button"
                        />
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/recovered"
                        android:text="@string/recovered"
                        style="@style/radio_button"
                        />
                </RadioGroup>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/themeTypeHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                app:layout_constraintTop_toBottomOf="@id/scrollType"
                android:layout_margin="@dimen/space_10dp"
                android:textSize="@dimen/first_widget_line"
                />


            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/themeTypeHeader"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:padding="@dimen/space_10dp"
                >
                <RadioGroup
                    android:id="@+id/rgThemeMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:checkedButton="@id/darkTheme"
                    >
                    <RadioButton
                        android:id="@+id/darkTheme"
                        android:text="@string/dark"
                        style="@style/radio_button"
                        />
                    <RadioButton
                        android:id="@+id/lightTheme"
                        style="@style/radio_button"
                        android:text="@string/light"
                        />
                </RadioGroup>
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:text="@string/add_widget"
        />

</RelativeLayout>